syntax = "proto3";
option csharp_namespace = "BlazorBoilerplate.Server";

import "Enumerations.proto";
import "google/protobuf/timestamp.proto";

message GetDatasetRequest {
  string userIdentifier = 1;
  string datasetIdentifier = 2;
}

message GetDatasetResponse {
  Dataset dataset = 1;
}

message GetDatasetsRequest {
  string userIdentifier = 1;
  string type = 2;
}

message GetDatasetsResponse {
  repeated Dataset datasets = 1;
}

message DeleteDatasetRequest {
  string userIdentifier = 1;
  string datasetIdentifier = 2;
}

message DeleteDatasetResponse {
  
}

message Dataset {
  string identifier = 1;
  string name = 2;
  string type = 3;
  google.protobuf.Timestamp creation_date = 4;
  int64 size = 5;
  string analysis = 6;
  string path = 7;
  string fileName = 8;
  string fileConfiguration = 9;
}

message CreateDatasetRequest {
    string userIdentifier = 1;  //Id associated to a specific user
    string fileName = 2;
    string datasetName = 3;
    string datasetType = 4;
  }
  
message CreateDatasetResponse {
  
  }

message SetDatasetFileConfigurationRequest {
  string userIdentifier = 1;
  string datasetIdentifier = 2;
  string file_configuration = 3;
}

message SetDatasetFileConfigurationResponse {

}

message TableColumn {
    string name = 1;
    DataType type = 2;
    repeated DataType convertibleTypes = 3; // types that this column can be converted to
  }
  
message GetTabularDatasetColumnRequest {
    string userIdentifier = 1;
    string datasetIdentifier = 2;
  }
  
message GetTabularDatasetColumnResponse {
    repeated TableColumn columns = 1;
  }